base58 and bignum class added renaming files moving all classes to crypto namespace

--- a/.cproject
+++ b/.cproject
@@ -63,7 +63,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="test_hex.cpp|test_ec.cpp|test_base64.cpp|test_hash.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="test_base58.cpp|test_big_num.cpp|test_hex.cpp|test_ec.cpp|test_base64.cpp|test_hash.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -109,7 +109,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="test_hex.cpp|test_ec.cpp|test_base64.cpp|test_hash.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="test_base58.cpp|test_big_num.cpp|test_hex.cpp|test_ec.cpp|test_base64.cpp|test_hash.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
